# todolist

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build_and_deploy.yaml
deploy/: .env  docker-compose.prod.yaml  nginx.conf
tests/: conftest.py  factories.py  fixtures.py
tests/board_tests/: board_update_test.py
tests/comment_tests/: comment_unAuth_test.py
tests/core_tests/: login_test.py
tests/goal_categories_tests/: list_category_test.py  nuAuth_user_cat_test.py
tests/goals_tests/: goal_list_test.py  goal_unAUTH_test.py
todolist/: settings.py  urls.py
todolist/bot/: models.py
todolist/bot/management/commands/: runbot.py
todolist/bot/tg/: 1.json  client.py  dc.py
todolist/core/: admin.py  models.py  serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py
todolist/goals/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_alter_goal_category_alter_goal_description_and_more.py  0003_board_goalcategory_board_boardparticipant.py  0004_create_new_objects.py  0005_alter_goalcategory_board.py  0006_alter_goal_due_date.py
