[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["DanilMirosh <miroshnichenko.da.vi@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
ansible-vault-win = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
